manifests/app/vote/overlays/prod/vote-ro-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: vote
spec:
  strategy:
    canary:
      stableMetadata:
        labels:
          role: stable
      canaryMetadata:
        labels:
          role: canary
      dynamicStableScale: true
      # canaryService: vote-preview
      # stableService: vote
      pingPong:
        pingService: vote-ping
        pongService: vote-pong
      trafficRouting:
        alb:
          stickinessConfig:
            enabled: true
            durationSeconds: 3600
          ingress: vote
          rootService: vote
          servicePort: 80
      steps:
      - setWeight: 20
      - pause: {duration: 3m}
      - setWeight: 40
      - pause: {duration: 3m}
      - setWeight: 60
      - pause: {}
