manifests/app/vote/overlays/prod/vote-ping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote-ping
spec:
  type: ClusterIP
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
  selector:
    app: vote
